learn-forms #comment Learning Forms

--- a/src/app/media-item-list.component.html
+++ b/src/app/media-item-list.component.html
@@ -1,7 +1,7 @@
 
 <section>
   <!-- // why we hgave the [0] [mediaItem]="mediaItems[0]" -->
-  <header>
+  <header id="holder">
     <div>{{ mediaItems | categoryList}}</div>
   </header>
     <mw-media-item *ngFor="let mediaItem of mediaItems"
