--- a/src/app/media-item-form.component.css
+++ b/src/app/media-item-form.component.css
@@ -2,6 +2,10 @@
     display: block;
     padding: 10px;
   }
+  #form {
+    float: left;
+    width: 100%;
+  }
   ul {
     list-style-type: none;
   }
