--- a/src/app/media-item-list.component.css
+++ b/src/app/media-item-list.component.css
@@ -4,6 +4,11 @@
   flex-direction: column;
   padding: 10px;
 }
+#holder {
+  float: left;
+  width: 100%;
+  margin: 0 0 10px 0;
+}
 header {
   color: #c6c5c3;
 }
